# cli

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  flake.nix  main.py  opendatastudio-cli  pyproject.toml  requirements.txt  test.sh
cli/: main.py
docs/: README.md  dataflow.json  generate_docs.sh
