[project]
name = "opendata-cli"
version = "0.0.0"
description = "A command line client for running opendata.studio datapackages"
requires-python = ">=3.11"
authors = [
    { name = "Varvara Efremova", email = "varvara@echus.co" },
    { name = "James Wilmot", email = "jameswilmot2000@gmail.com" },
]
readme = "README.md"
dependencies = [
    "typer >= 0.12, < 1",
]

[project.scripts]
opendata-cli = "opendata-cli.main:app"

[project.urls]
"Homepage" = "https://github.com/opendatafit/cli"
"Bug Tracker" = "https://github.com/opendatafit/cli/issues"

[project.optional-dependencies]
development = [
    "pre-commit",
    "build",
]
all = ["opendata-cli[development]"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
include = '\.pyi?$'
force-exclude = '''
/(
    \.git
)/
'''
