[project]
name = "opendatacli"
version = "0.0.0"
description = "A command line client for running opendata.studio datapackages"
requires-python = ">=3.11"
authors = [
    { name = "Varvara Efremova", email = "varvara@echus.co" },
    { name = "James Wilmot", email = "jameswilmot2000@gmail.com" },
]
readme = "README.md"
dependencies = [
    "typer >= 0.12, < 1",
    "docker >= 7.1.0, < 8",
    "matplotlib >= 3.9.1, < 4",
    "tornado",  # Required for rendering interactive plots
    "opendatapy @ git+ssh://git@github.com/opendatastudio/opendatapy@main",
    "tabulate",
]

[project.scripts]
ods = "cli.main:app"

[project.urls]
"Homepage" = "https://github.com/opendatastudio/cli"
"Bug Tracker" = "https://github.com/opendatastudio/cli/issues"

[project.optional-dependencies]
development = [
    "pre-commit",
    "build",
]
all = ["opendatacli[development]"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
include = '\.pyi?$'
force-exclude = '''
/(
    \.git
)/
'''
